--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       font-family: "Inter", sans-serif;
     }
 
+    .favicon-32x32 {
+      width: 20px;
+      height: 20px;
+      fill: #178FF5;
+    }
+
     /* Animations */
     @keyframes slideInFromLeft {
       0% {
@@ -459,7 +465,7 @@
       <a href="#" class="rectan-card" aria-label="card">
         <div class="up">
           <p>Likes</p>
-          <img src="http://localhost:3000/images/icon-facebook.svg" alt="media-icon">
+          <img id="favicon-32x32" src="http://localhost:3000/images/favicon-32x32.png" alt="media-icon">
         </div>
         <div class="down">
           <h2 id="likes">52</h2>
