--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       font-family: "Inter", sans-serif;
     }
 
-    .favicon-32x32 {
+    .favicon {
       width: 20px;
       height: 20px;
       fill: #178FF5;
@@ -465,7 +465,7 @@
       <a href="#" class="rectan-card" aria-label="card">
         <div class="up">
           <p>Likes</p>
-          <img id="favicon-32x32" src="http://localhost:3000/images/favicon-32x32.png" alt="media-icon">
+          <img src="http://localhost:3000/images/favicon-32x32.png" style="height: 20px; width: 20px;" alt="media-icon">
         </div>
         <div class="down">
           <h2 id="likes">52</h2>
