--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
       </a>
       <a href="#" class="rectan-card" aria-label="card">
         <div class="up">
-          <p>Likes</p>
+          <p>Subscribers</p>
           <img src="http://localhost:3000/images/favicon-32x32.png" style="height: 20px; width: 20px;" alt="media-icon">
         </div>
         <div class="down">
